feat: integrated websocket scaffold with jwt auth support

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Vue3 + Vite + TypeScript + Element-Plus 的后台管理模板 " />
     <meta
       name="keywords"
-      content="vue,element-plus,typescript,vue-element-admin,vue3-element-admin"
+      content="vue,element-plus,typescript,vue-element-admin,light-admin-ui"
     />
     <title>%VITE_APP_TITLE%</title>
   </head>
